<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ニコ生アラート</string>

    <string name="message_pre">アプリケーションの初期化中です。</string>
    <string name="message_top">通知サーバに端末を登録します。\nニコニコ動画のログイン情報を入力し登録してください。</string>
    <string name="message_doing">処理中…</string>
    <string name="message_finish">登録完了しました。\n完了通知を確認してください。\n\n注意事項：\n※参加コミュニティの変更を行った場合は再登録が必要となります。\n※アンインストール前には必ず登録解除を行ってください。サーバにデータが残ってしまいます。</string>
    <string name="message_finish_unregister">登録解除が完了しました。</string>
    <string name="message_error">エラーが発生しました。</string>
    <string name="message_registoring">通知サーバに登録中です。\n数秒で終わらない場合は通信回線かサーバに異常があります。時間を置いてやり直してみてください。</string>
    
    <string name="okButton">確認</string>
    <string name="cancelButton">取消</string>
    <string name="finishButton">終了</string>
    
    <string name="mail_address">Mail address</string>
    <string name="password">Password</string>
    <string name="register">登録</string>
    <string name="unregister">登録解除</string>
    
    <string name="on_registered">通知サーバへ登録が完了しました。</string>
    <string name="on_unregistered">通知サーバの登録が解除されました。</string>
    <string name="on_registered_sub">ID: %s</string>
    <string name="on_live_sub">生放送: %s</string>
    
    
    <string name="menu_settings">設定</string>
    <string name="pref_host">通知サーバ ホスト名</string>
    <string name="pref_port">通知サーバ ポート番号</string>
    <string name="pref_sound">音声通知</string>
    <string name="pref_vibration">振動通知</string>
    
    
</resources>
