<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="kote.dip.jp"
        android:inputType="textUri"
        android:key="host"
        android:title="@string/pref_host" />
    <EditTextPreference
        android:defaultValue="9001"
        android:inputType="number"
        android:key="port"
        android:maxLength="5"
        android:title="@string/pref_port" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sound"
        android:selectable="true"
        android:title="@string/pref_sound" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vibration"
        android:selectable="true"
        android:title="@string/pref_vibration" />

</PreferenceScreen>